implement dictionary-app

--- a/src/stylesheet/css/style.css
+++ b/src/stylesheet/css/style.css
@@ -154,8 +154,7 @@ body {
 .search-form {
   display: flex;
   justify-content: center;
-  -moz-column-gap: 8px;
-       column-gap: 8px;
+  column-gap: 8px;
   padding: 20px;
 }
 .search-form .search-input {
@@ -258,4 +257,6 @@ body {
 
 .main {
   margin-bottom: 30px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
