implement update fix review

--- a/src/stylesheet/sass/base/_typography.scss
+++ b/src/stylesheet/sass/base/_typography.scss
@@ -2,14 +2,16 @@
 
 @font-face {
   font-family: 'SVN-Gilroy';
-  src: url('../../assets/fonts/SVN-Gilroy-Bold.otf') format('opentype');
+  src: url('../../../assets/fonts/fonnts.com-SVNGilroy-Bold.otf')
+    format('opentype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SVN-Gilroy';
-  src: url('../../assets/fonts/SVN-Gilroy-Light.otf') format('opentype');
+  src: url('../../../assets/fonts/fonnts.com-SVNGilroy-Light.otf')
+    format('opentype');
   font-weight: normal;
   font-style: normal;
 }
