--- a/src/stylesheet/sass/base/_variables.scss
+++ b/src/stylesheet/sass/base/_variables.scss
@@ -9,9 +9,9 @@ $neutral-color-60: #667479;
 $neutral-color-80: #242b33;
 $dark-blue-80: #002a48;
 $state-color: #00a7e7;
-$orange-color: #FC643A;
-$pink-color: #FFC0CB;
-$gray-color: #EADFD4;
+$orange-color: #fc643a;
+$pink-color: #ffc0cb;
+$gray-color: #eadfd4;
 
 $shadow-color-01: 0 4px 8px rgba(0, 0, 0, 0.1);
 
