--- a/src/stylesheet/sass/component/_button.scss
+++ b/src/stylesheet/sass/component/_button.scss
@@ -1,29 +1,28 @@
 @use '../base' as *;
 
 .btn {
-  font-family: $font-primary;
-  background-color: $white-color;
-  color: $black-color;
-  border-radius: 57px;
   padding: 14px 28px;
+  border-radius: 57px;
+
+  background-color: $white-color;
 
   font-size: $text-md;
+  font-family: $font-primary;
   color: $black-color;
 
   cursor: pointer;
+
+  &.btn-primary {
+    background-color: $primary-color;
+
+    color: $neutral-white-color;
+  }
+
+  &.btn-outline {
+    border: 1px solid $primary-color;
+
+    background-color: inherit;
+
+    color: $primary-color;
+  }
 }
-
-.btn-primary {
-  background-color: $primary-color;
-
-  color: $neutral-white-color;
-}
-
-.btn-outline {
-  border: 1px solid $primary-color;
-
-  background-color: inherit;
-
-  color: $primary-color;
-}
-
