--- a/src/stylesheet/sass/layout/_footer.scss
+++ b/src/stylesheet/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 @use '../base' as *;
 
 .footer {
-  .section-title {
+  .title {
     font-size: $text-md;
     font-weight: $font-700;
     text-align: center;
