--- a/src/stylesheet/sass/base/_reset.scss
+++ b/src/stylesheet/sass/base/_reset.scss
@@ -2,9 +2,6 @@ html,
 body,
 div,
 span,
-applet,
-object,
-iframe,
 h1,
 h2,
 h3,
@@ -12,73 +9,30 @@ h4,
 h5,
 h6,
 p,
-blockquote,
-pre,
 a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
 b,
 u,
 i,
-center,
 dl,
 dt,
 dd,
 ol,
 ul,
 li,
-fieldset,
 form,
 label,
-legend,
 table,
-caption,
 tbody,
 tfoot,
 thead,
 tr,
 th,
 td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
 footer,
 header,
-hgroup,
 menu,
 nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+section {
   margin: 0;
   padding: 0;
   border: 0;
@@ -86,15 +40,8 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
-
-article,
-aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
 menu,
 nav,
 section {
@@ -112,8 +59,6 @@ blockquote,
 q {
   quotes: none;
 }
-blockquote:before,
-blockquote:after,
 q:before,
 q:after {
   content: '';
