--- a/src/stylesheet/sass/component/_dictionary.scss
+++ b/src/stylesheet/sass/component/_dictionary.scss
@@ -1,43 +1,50 @@
 @use '../base' as *;
 
-.section-content {
-  padding: 20px;
+.dictionary-page {
+  .notification-content {
+    padding: 20px;
+
+    .loading {
+      display: flex;
+      justify-content: center;
+    }
+
+    .message {
+      display: flex;
+      justify-content: center;
+    }
+  }
 
   .dictionary-list {
-    .dictionary-item {
+    .list-item {
       .phonetic-list {
         text-transform: none;
       }
 
       .meaning-list {
         padding-left: 0px;
-
-        .meaning-item {
-          .type-word {
-            color: $neutral-color;
-            margin-bottom: 8px;
-            font-size: $text-lg;
-            font-weight: $font-700;
-            font-style: italic;
-            border-bottom: 1px solid $dark-blue-80;
-          }
-
-          .meaning-text {
-            margin-bottom: 8px;
-          }
-
-          .definition-list {
-            .definition-item {
-              margin-bottom: 4px;
-            }
-          }
-        }
       }
     }
   }
+  .meaning-item {
+    .type-word {
+      margin-bottom: 8px;
+      border-bottom: 1px solid $dark-blue-80;
 
-  .section-message {
-    display: flex;
-    justify-content: center;
+      font-size: $text-lg;
+      font-weight: $font-700;
+      font-style: italic;
+      color: $neutral-color;
+    }
+
+    .meaning-text {
+      margin-bottom: 8px;
+    }
+
+    .definition-list {
+      .definition-item {
+        margin-bottom: 4px;
+      }
+    }
   }
 }
