--- a/src/stylesheet/sass/layout/_grid.scss
+++ b/src/stylesheet/sass/layout/_grid.scss
@@ -1,10 +1,11 @@
 .container {
   max-width: 1212px;
   width: 100%;
-  margin: 0 auto;
   padding: 0 16px;
+  margin: 0 auto;
 }
 
-.main {
+.dictionary-page {
+  min-height: 500px;
   margin-bottom: 30px;
 }
