--- a/src/stylesheet/sass/layout/_header.scss
+++ b/src/stylesheet/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
   padding: 20px 0;
-  .section-header {
+  .title {
     font-size: $text-xl;
     font-weight: $font-700;
     color: $primary-color;
